// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.BlockLayout.Line props testing checkGrammar=false 1`] = `
<Line
  checkGrammar={false}
  className="uublocklayout-1unjvdi"
  content={null}
  dynamic={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  size="s"
/>
`;

exports[`UU5.BlockLayout.Line props testing checkGrammar=true 1`] = `
<Line
  checkGrammar={true}
  className="uublocklayout-1unjvdi"
  content={null}
  dynamic={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  size="s"
/>
`;

exports[`UU5.BlockLayout.Line props testing checkHighlight=false 1`] = `
<Line
  checkHighlight={false}
  className="uublocklayout-1unjvdi"
  content={null}
  dynamic={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  size="s"
/>
`;

exports[`UU5.BlockLayout.Line props testing checkHighlight=true 1`] = `
<Line
  checkHighlight={true}
  className="uublocklayout-1unjvdi"
  content={null}
  dynamic={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  size="s"
/>
`;

exports[`UU5.BlockLayout.Line props testing checkSpaces=false 1`] = `
<Line
  checkSpaces={false}
  className="uublocklayout-1unjvdi"
  content={null}
  dynamic={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  size="s"
/>
`;

exports[`UU5.BlockLayout.Line props testing checkSpaces=true 1`] = `
<Line
  checkSpaces={true}
  className="uublocklayout-1unjvdi"
  content={null}
  dynamic={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  size="s"
/>
`;

exports[`UU5.BlockLayout.Line props testing className="my-classname" 1`] = `
<Line
  className="uublocklayout-1unjvdi my-classname"
  content={null}
  dynamic={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  size="s"
/>
`;

exports[`UU5.BlockLayout.Line props testing className="test-classname" 1`] = `
<Line
  className="uublocklayout-1unjvdi test-classname"
  content={null}
  dynamic={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  size="s"
/>
`;

exports[`UU5.BlockLayout.Line props testing colorSchema="brown" 1`] = `
<Line
  className="color-schema-brown uublocklayout-1unjvdi"
  colorSchema="brown"
  content={null}
  dynamic={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  size="s"
/>
`;

exports[`UU5.BlockLayout.Line props testing colorSchema="brown-rich" 1`] = `
<Line
  className="color-schema-brown-rich uublocklayout-1unjvdi"
  colorSchema="brown-rich"
  content={null}
  dynamic={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  size="s"
/>
`;

exports[`UU5.BlockLayout.Line props testing colorSchema="cyan" 1`] = `
<Line
  className="color-schema-cyan uublocklayout-1unjvdi"
  colorSchema="cyan"
  content={null}
  dynamic={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  size="s"
/>
`;

exports[`UU5.BlockLayout.Line props testing colorSchema="cyan-rich" 1`] = `
<Line
  className="color-schema-cyan-rich uublocklayout-1unjvdi"
  colorSchema="cyan-rich"
  content={null}
  dynamic={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  size="s"
/>
`;

exports[`UU5.BlockLayout.Line props testing colorSchema="default" 1`] = `
<Line
  className="color-schema-default uublocklayout-1unjvdi"
  colorSchema="default"
  content={null}
  dynamic={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  size="s"
/>
`;

exports[`UU5.BlockLayout.Line props testing colorSchema="green" 1`] = `
<Line
  className="color-schema-green uublocklayout-1unjvdi"
  colorSchema="green"
  content={null}
  dynamic={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  size="s"
/>
`;

exports[`UU5.BlockLayout.Line props testing colorSchema="green-rich" 1`] = `
<Line
  className="color-schema-green-rich uublocklayout-1unjvdi"
  colorSchema="green-rich"
  content={null}
  dynamic={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  size="s"
/>
`;

exports[`UU5.BlockLayout.Line props testing colorSchema="grey" 1`] = `
<Line
  className="color-schema-grey uublocklayout-1unjvdi"
  colorSchema="grey"
  content={null}
  dynamic={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  size="s"
/>
`;

exports[`UU5.BlockLayout.Line props testing colorSchema="grey-rich" 1`] = `
<Line
  className="color-schema-grey-rich uublocklayout-1unjvdi"
  colorSchema="grey-rich"
  content={null}
  dynamic={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  size="s"
/>
`;

exports[`UU5.BlockLayout.Line props testing colorSchema="orange" 1`] = `
<Line
  className="color-schema-orange uublocklayout-1unjvdi"
  colorSchema="orange"
  content={null}
  dynamic={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  size="s"
/>
`;

exports[`UU5.BlockLayout.Line props testing colorSchema="orange-rich" 1`] = `
<Line
  className="color-schema-orange-rich uublocklayout-1unjvdi"
  colorSchema="orange-rich"
  content={null}
  dynamic={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  size="s"
/>
`;

exports[`UU5.BlockLayout.Line props testing colorSchema="pink" 1`] = `
<Line
  className="color-schema-pink uublocklayout-1unjvdi"
  colorSchema="pink"
  content={null}
  dynamic={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  size="s"
/>
`;

exports[`UU5.BlockLayout.Line props testing colorSchema="pink-rich" 1`] = `
<Line
  className="color-schema-pink-rich uublocklayout-1unjvdi"
  colorSchema="pink-rich"
  content={null}
  dynamic={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  size="s"
/>
`;

exports[`UU5.BlockLayout.Line props testing colorSchema="purple" 1`] = `
<Line
  className="color-schema-purple uublocklayout-1unjvdi"
  colorSchema="purple"
  content={null}
  dynamic={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  size="s"
/>
`;

exports[`UU5.BlockLayout.Line props testing colorSchema="purple-rich" 1`] = `
<Line
  className="color-schema-purple-rich uublocklayout-1unjvdi"
  colorSchema="purple-rich"
  content={null}
  dynamic={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  size="s"
/>
`;

exports[`UU5.BlockLayout.Line props testing colorSchema="red" 1`] = `
<Line
  className="color-schema-red uublocklayout-1unjvdi"
  colorSchema="red"
  content={null}
  dynamic={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  size="s"
/>
`;

exports[`UU5.BlockLayout.Line props testing colorSchema="red-rich" 1`] = `
<Line
  className="color-schema-red-rich uublocklayout-1unjvdi"
  colorSchema="red-rich"
  content={null}
  dynamic={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  size="s"
/>
`;

exports[`UU5.BlockLayout.Line props testing colorSchema="yellow" 1`] = `
<Line
  className="color-schema-yellow uublocklayout-1unjvdi"
  colorSchema="yellow"
  content={null}
  dynamic={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  size="s"
/>
`;

exports[`UU5.BlockLayout.Line props testing colorSchema="yellow-rich" 1`] = `
<Line
  className="color-schema-yellow-rich uublocklayout-1unjvdi"
  colorSchema="yellow-rich"
  content={null}
  dynamic={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  size="s"
/>
`;

exports[`UU5.BlockLayout.Line props testing content="This is Content from ContentMixin" 1`] = `
<Line
  className="uublocklayout-1unjvdi"
  content="This is Content from ContentMixin"
  dynamic={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  size="s"
/>
`;

exports[`UU5.BlockLayout.Line props testing content=12345 1`] = `
<Line
  className="uublocklayout-1unjvdi"
  content={12345}
  dynamic={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  size="s"
/>
`;

exports[`UU5.BlockLayout.Line props testing controlled=false 1`] = `
<Line
  className="uublocklayout-1unjvdi"
  content={null}
  dynamic={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  size="s"
/>
`;

exports[`UU5.BlockLayout.Line props testing controlled=true 1`] = `
<Line
  className="uublocklayout-1unjvdi"
  content={null}
  dynamic={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  size="s"
/>
`;

exports[`UU5.BlockLayout.Line props testing default props 1`] = `
<Line
  className="uublocklayout-1unjvdi"
  content={null}
  dynamic={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  size="s"
/>
`;

exports[`UU5.BlockLayout.Line props testing disabled=false 1`] = `
<Line
  className="uublocklayout-1unjvdi"
  content={null}
  dynamic={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  size="s"
/>
`;

exports[`UU5.BlockLayout.Line props testing disabled=false 3`] = `
<Line
  className="uublocklayout-1unjvdi"
  content={null}
  dynamic={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  size="s"
/>
`;

exports[`UU5.BlockLayout.Line props testing disabled=true 1`] = `
<Line
  className="uublocklayout-1unjvdi"
  content={null}
  disabled={true}
  dynamic={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  size="s"
/>
`;

exports[`UU5.BlockLayout.Line props testing disabled=true 3`] = `
<Line
  className="uublocklayout-1unjvdi"
  content={null}
  disabled={true}
  dynamic={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  size="s"
/>
`;

exports[`UU5.BlockLayout.Line props testing dynamic=false 1`] = `
<Line
  className="uublocklayout-1unjvdi"
  content={null}
  dynamic={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  size="s"
/>
`;

exports[`UU5.BlockLayout.Line props testing dynamic=true 1`] = `
<Line
  className="uublocklayout-1unjvdi"
  content={null}
  dynamic={true}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  size="s"
/>
`;

exports[`UU5.BlockLayout.Line props testing elementAttrs={"data":{"test":"data-test-value"}} 1`] = `
<Line
  className="uublocklayout-1unjvdi"
  content={null}
  dynamic={false}
  elementAttrs={
    Object {
      "data": Object {
        "test": "data-test-value",
      },
    }
  }
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  size="s"
/>
`;

exports[`UU5.BlockLayout.Line props testing fullTextSearchPriority=0 1`] = `
<Line
  className="uublocklayout-1unjvdi uu-fulltextsearch-0"
  content={null}
  dynamic={false}
  fullTextSearchPriority={0}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  size="s"
/>
`;

exports[`UU5.BlockLayout.Line props testing fullTextSearchPriority=0 2`] = `
<Line
  className="uublocklayout-1unjvdi uu-fulltextsearch-0"
  content={null}
  dynamic={false}
  fullTextSearchPriority={0}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  size="s"
/>
`;

exports[`UU5.BlockLayout.Line props testing hidden=false 1`] = `
<Line
  className="uublocklayout-1unjvdi"
  content={null}
  dynamic={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  size="s"
/>
`;

exports[`UU5.BlockLayout.Line props testing hidden=false 3`] = `
<Line
  className="uublocklayout-1unjvdi"
  content={null}
  dynamic={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  size="s"
/>
`;

exports[`UU5.BlockLayout.Line props testing hidden=true 1`] = `
<Line
  className="uublocklayout-1unjvdi"
  content={null}
  dynamic={false}
  hidden={true}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  size="s"
/>
`;

exports[`UU5.BlockLayout.Line props testing hidden=true 3`] = `
<Line
  className="uublocklayout-1unjvdi"
  content={null}
  dynamic={false}
  hidden={true}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  size="s"
/>
`;

exports[`UU5.BlockLayout.Line props testing id="myId" 1`] = `
<Line
  className="uublocklayout-1unjvdi"
  content={null}
  dynamic={false}
  id="myId-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  size="s"
/>
`;

exports[`UU5.BlockLayout.Line props testing id="test-id" 1`] = `
<Line
  className="uublocklayout-1unjvdi"
  content={null}
  dynamic={false}
  id="test-id-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  size="s"
/>
`;

exports[`UU5.BlockLayout.Line props testing ignoreHTML=false 1`] = `
<Line
  className="uublocklayout-1unjvdi"
  content={null}
  dynamic={false}
  id="uuID-inner"
  ignoreHTML={false}
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  size="s"
/>
`;

exports[`UU5.BlockLayout.Line props testing ignoreHTML=true 1`] = `
<Line
  className="uublocklayout-1unjvdi"
  content={null}
  dynamic={false}
  id="uuID-inner"
  ignoreHTML={true}
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  size="s"
/>
`;

exports[`UU5.BlockLayout.Line props testing mainAttrs=undefined 1`] = `
<Line
  className="uublocklayout-1unjvdi"
  content={null}
  dynamic={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  size="s"
/>
`;

exports[`UU5.BlockLayout.Line props testing name="myName" 1`] = `
<Line
  className="uublocklayout-1unjvdi"
  content={null}
  dynamic={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name="myName-inner"
  size="s"
/>
`;

exports[`UU5.BlockLayout.Line props testing nestingLevel="bigBox" 1`] = `
<Line
  className="uublocklayout-1unjvdi"
  content={null}
  dynamic={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  nestingLevel="bigBox"
  size="s"
/>
`;

exports[`UU5.BlockLayout.Line props testing nestingLevel="bigBoxCollection" 1`] = `
<Line
  className="uublocklayout-1unjvdi"
  content={null}
  dynamic={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
  size="s"
/>
`;

exports[`UU5.BlockLayout.Line props testing nestingLevel="box" 1`] = `
<Line
  className="uublocklayout-1unjvdi"
  content={null}
  dynamic={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  nestingLevel="box"
  size="s"
/>
`;

exports[`UU5.BlockLayout.Line props testing nestingLevel="box" 3`] = `
<Line
  className="uublocklayout-1unjvdi"
  content={null}
  dynamic={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  nestingLevel="box"
  size="s"
/>
`;

exports[`UU5.BlockLayout.Line props testing nestingLevel="boxCollection" 1`] = `
<Line
  className="uublocklayout-1unjvdi"
  content={null}
  dynamic={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  nestingLevel="boxCollection"
  size="s"
/>
`;

exports[`UU5.BlockLayout.Line props testing nestingLevel="inline" 1`] = `""`;

exports[`UU5.BlockLayout.Line props testing nestingLevel="inline" 3`] = `""`;

exports[`UU5.BlockLayout.Line props testing nestingLevel="page" 1`] = `
<Line
  className="uublocklayout-1unjvdi"
  content={null}
  dynamic={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  nestingLevel="page"
  size="s"
/>
`;

exports[`UU5.BlockLayout.Line props testing nestingLevel="smallBox" 1`] = `""`;

exports[`UU5.BlockLayout.Line props testing nestingLevel="smallBoxCollection" 1`] = `""`;

exports[`UU5.BlockLayout.Line props testing nestingLevel="spa" 1`] = `
<Line
  className="uublocklayout-1unjvdi"
  content={null}
  dynamic={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  nestingLevel="spa"
  size="s"
/>
`;

exports[`UU5.BlockLayout.Line props testing noPrint=false 1`] = `
<Line
  className="uublocklayout-1unjvdi"
  content={null}
  dynamic={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  noPrint={false}
  size="s"
/>
`;

exports[`UU5.BlockLayout.Line props testing noPrint=true 1`] = `
<Line
  className="uublocklayout-1unjvdi"
  content={null}
  dynamic={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  noPrint={true}
  size="s"
/>
`;

exports[`UU5.BlockLayout.Line props testing pureRender=false 1`] = `
<Line
  className="uublocklayout-1unjvdi"
  content={null}
  dynamic={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  size="s"
/>
`;

exports[`UU5.BlockLayout.Line props testing pureRender=true 1`] = `
<Line
  className="uublocklayout-1unjvdi"
  content={null}
  dynamic={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  pureRender={true}
  size="s"
/>
`;

exports[`UU5.BlockLayout.Line props testing selected=false 1`] = `
<Line
  className="uublocklayout-1unjvdi"
  content={null}
  dynamic={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  size="s"
/>
`;

exports[`UU5.BlockLayout.Line props testing selected=true 1`] = `
<Line
  className="uublocklayout-1unjvdi"
  content={null}
  dynamic={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  selected={true}
  size="s"
/>
`;

exports[`UU5.BlockLayout.Line props testing style="padding:8px; borderRadius: 2px" 1`] = `
<Line
  className="uublocklayout-1unjvdi"
  content={null}
  dynamic={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  size="s"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
/>
`;

exports[`UU5.BlockLayout.Line props testing style={"backgroundColor":"red","color":"blue"} 1`] = `
<Line
  className="uublocklayout-1unjvdi"
  content={null}
  dynamic={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  size="s"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
/>
`;

exports[`UU5.BlockLayout.Line props testing style={"margin":8} 1`] = `
<Line
  className="uublocklayout-1unjvdi"
  content={null}
  dynamic={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  size="s"
  style={
    Object {
      "margin": 8,
    }
  }
/>
`;

exports[`UU5.BlockLayout.Line props testing textCorrector=false 1`] = `
<Line
  className="uublocklayout-1unjvdi"
  content={null}
  dynamic={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  size="s"
  textCorrector={false}
/>
`;

exports[`UU5.BlockLayout.Line props testing textCorrector=true 1`] = `
<Line
  className="uublocklayout-1unjvdi"
  content={null}
  dynamic={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  size="s"
  textCorrector={true}
/>
`;

exports[`UU5.BlockLayout.Line props testing tooltip="My Tooltip" 1`] = `
<Line
  className="uublocklayout-1unjvdi"
  content={null}
  dynamic={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "title": "My Tooltip",
    }
  }
  size="s"
  tooltip="My Tooltip"
/>
`;
